# ArtekmedRos2

./: .gitignore  README.md  artekmedros2.code-workspace  desktop.ini  overrideQoS.yaml
Messages/: CMakeLists.txt  package.xml
Messages/msg/: Communication.msg
Python/node_manager_trial/: package.xml  setup.cfg  setup.py
Python/node_manager_trial/install/: setup.bat  setup.ps1
Python/node_manager_trial/install/node_manager_trial/Lib/node_manager_trial/: node_manager-script.py  node_manager_trial-script.py
Python/node_manager_trial/install/node_manager_trial/share/node_manager_trial/: package.bat  package.dsv  package.ps1
ShellScripts/Customized_msgs/: CMakeLists.txt  package.xml
ShellScripts/Customized_msgs/install/: setup.bat  setup.ps1
ShellScripts/Customized_msgs/install/node_manager/share/ament_index/resource_index/parent_prefix_path/: node_manager
ShellScripts/Customized_msgs/install/node_manager/share/node_manager/: local_setup.bat  package.bat  package.dsv  package.ps1
ShellScripts/Customized_msgs/log/: latest_build
ShellScripts/Customized_msgs/src/: node_manager_function.cs
ShellScripts/String_msgs_hololens/: CMakeLists.txt
ShellScripts/String_msgs_hololens/install/: setup.bat  setup.ps1
ShellScripts/String_msgs_hololens/install/string_node_manager/share/string_node_manager/: package.dsv  package.ps1
ShellScripts/String_msgs_hololens/log/: latest_build
ShellScripts/String_msgs_hololens/src/: string_node_manager_function.cs
ShellScripts/String_msgs_multiple_functions/install/: setup.bat  setup.ps1
ShellScripts/String_msgs_multiple_functions/log/: latest_build
ShellScripts/String_msgs_multiple_functions/src/: string_node_manager_function.cs
ShellScripts/string_msgs_hololens_dll/: CMakeLists.txt
ShellScripts/string_msgs_hololens_dll/install/: setup.bat  setup.ps1
ShellScripts/string_msgs_hololens_dll/log/: latest_build
ShellScripts/string_msgs_hololens_dll/src/: string_node_manager_function.cs
ShellScripts/string_msgs_multiple_functions_ddl/: CMakeLists.txt
ShellScripts/string_msgs_multiple_functions_ddl/install/: setup.bat  setup.ps1
ShellScripts/string_msgs_multiple_functions_ddl/install/string_msgs_multiple_functions_ddl/share/ament_index/resource_index/parent_prefix_path/: string_msgs_multiple_functions_ddl
ShellScripts/string_msgs_multiple_functions_ddl/install/string_msgs_multiple_functions_ddl/share/string_msgs_multiple_functions_ddl/: local_setup.bat  package.bat  package.dsv  package.ps1  package.xml
ShellScripts/string_msgs_multiple_functions_ddl/install/string_msgs_multiple_functions_ddl/share/string_msgs_multiple_functions_ddl/cmake/: string_msgs_multiple_functions_ddlConfig.cmake
ShellScripts/string_msgs_multiple_functions_ddl/log/: latest_build
ShellScripts/string_msgs_multiple_functions_ddl/src/: string_msgs_multiple_functions_ddl.cs
UnityProjects/ros2hololens/: .gitignore
UnityProjects/ros2hololens/Assets/: WSATestCertificate.pfx  link.xml
UnityProjects/ros2hololens/Assets/Scenes/: SampleScene.unity
UnityProjects/ros2hololens/Assets/Scripts/: UserHololens.cs  UserScriptMulti.cs
UnityProjects/ros2hololens/Assets/XR/: XRGeneralSettings.asset
UnityProjects/ros2hololens/Assets/XR/Settings/: OpenXR Package Settings.asset
UnityProjects/ros2hololens/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityScripts/Customized_msgs_User/: UserExample.cs
UnityScripts/Hololens/customized_msgs_hololens/: UserScriptMulti.cs
UnityScripts/Hololens/string_msgs_dll_hololens/: UserHololens.cs
UnityScripts/Hololens/string_msgs_hololens/: README.txt  UserHololens.cs
UnityScripts/Local/String_msgs_multiple_functions/: UserScriptMulti.cs
UnityScripts/Local/String_msgs_multiple_functions_hash/: UserStringHash.cs
UnityScripts/String_msgs_multiple_functions_hash/: UserStringHash.cs
UnityScripts/String_msgs_single_function/: UserScript.cs
my_bag/: metadata.yaml  my_bag_0.db3
(+11 files in other folders)
