<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>customized_msgs</name>
  <version>0.0.0</version>
  <description>Self-made messages for optimizing Artekmed nodes communication</description>
  <maintainer email="padillaperezjorge@gmail.com">Jorge</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_cmake</depend>
  
  <depend>ament_cmake_export_assemblies</depend>
  <depend>rosidl_cmake</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rcldotnet</depend>
  <depend>rcldotnet_common</depend>

  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>